--- a/Writerside/writerside.cfg
+++ b/Writerside/writerside.cfg
@@ -8,5 +8,5 @@
     <categories src="c.list"/>
     <vars src="v.list"/>
     <instance src="Writerside_libraries.tree"/>
-    <instance src="g.tree"/>
+    <instance src="g.tree" version="1.0"/>
 </ihp>
