docs: update action for only tag and pdf

--- a/Writerside/writerside.cfg
+++ b/Writerside/writerside.cfg
@@ -7,6 +7,5 @@
     <images dir="images" web-path="images"/>
     <categories src="c.list"/>
     <vars src="v.list"/>
-    <instance src="Writerside_libraries.tree"/>
-    <instance src="g.tree" version="1.0"/>
+    <instance src="v1.0.0.tree" version="1.0"/>
 </ihp>
