--- a/.github/workflows/build-docs.yaml
+++ b/.github/workflows/build-docs.yaml
@@ -2,23 +2,22 @@ name: Build documentation
 
 on:
   push:
-    branches: ["main"]
-  workflow_dispatch:
+    tags:
+      - "v*.*.*"
 
 permissions:
   id-token: write
   pages: write
 
 env:
-  INSTANCE: 'Writerside/g'
-  DOCKER_VERSION: '243.22562'
-# IS_GROUP: 'true'  # Uncomment to build a group
+  INSTANCE: 'Writerside/gnss-ir-version-docs'
+  DOCKER_VERSION: '2025.04.8412'
+  IS_GROUP: 'true'  # Uncomment to build a group
 
 jobs:
   build:
     runs-on: ubuntu-latest
     outputs:
-      algolia_artifact: ${{ steps.define-ids.outputs.algolia_artifact }}
       artifact: ${{ steps.define-ids.outputs.artifact }}
     steps:
       - name: Checkout repository
@@ -32,39 +31,57 @@ jobs:
           INSTANCE=${INSTANCE#*/}
           INSTANCE_ID_UPPER=$(echo "$INSTANCE" | tr '[:lower:]' '[:upper:]')
           ARTIFACT="webHelp${INSTANCE_ID_UPPER}2-all.zip"
-          ALGOLIA_ARTIFACT="algolia-indexes-${INSTANCE_ID_UPPER}.zip"
 
           # Print the values
           echo "INSTANCE_ID_UPPER: $INSTANCE_ID_UPPER"
           echo "ARTIFACT: $ARTIFACT"
-          echo "ALGOLIA_ARTIFACT: $ALGOLIA_ARTIFACT"
 
           # Set the environment variables and outputs
           echo "INSTANCE_ID_UPPER=$INSTANCE_ID_UPPER" >> $GITHUB_ENV
           echo "ARTIFACT=$ARTIFACT" >> $GITHUB_ENV
-          echo "ALGOLIA_ARTIFACT=$ALGOLIA_ARTIFACT" >> $GITHUB_ENV
           echo "artifact=$ARTIFACT" >> $GITHUB_OUTPUT
-          echo "algolia_artifact=$ALGOLIA_ARTIFACT" >> $GITHUB_OUTPUT
 
       - name: Build docs using Writerside Docker builder
         uses: JetBrains/writerside-github-action@v4
         with:
           instance: ${{ env.INSTANCE }}
           docker-version: ${{ env.DOCKER_VERSION }}
-          is-group: ${{ env.IS_GROUP }}
           artifact: ${{ steps.define-ids.outputs.artifact }}
+          is-group: ${{ env.IS_GROUP }}
 
-      - name: Save artifact with build results
-        uses: actions/upload-artifact@v4
+      - name: Add versions.json file
+        run: |
+          zip -u ${{ steps.define-ids.outputs.artifact }} versions.json
+
+#      - name: Save artifact with build results
+#        uses: actions/upload-artifact@v4
+#        with:
+#          name: docs
+#          path: artifacts/*
+#          retention-days: 7
+  build-pdf:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout Repository
+        uses: actions/checkout@v4
         with:
-          name: docs
-          path: artifacts/*
-          retention-days: 7
+          fetch-depth: 0
+
+      - name: Build PDF using Writerside Docker builder
+        uses: JetBrains/writerside-github-action@v4
+        with:
+          docker-version: ${{ env.DOCKER_VERSION }}
+          instance: "Writerside/${{ github.ref_name }}"
+          artifact: "gnss-ir-${{ github.ref_name }}.pdf"
+          pdf: true
+
   deploy:
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
-    needs: build
+    needs:
+      - build
+      - build-pdf
     runs-on: ubuntu-latest
     steps:
       - name: Download artifacts
@@ -75,9 +92,6 @@ jobs:
 
       - name: Unzip artifact
         run: unzip -O UTF-8 -qq "artifacts/${{ needs.build.outputs.artifact }}" -d dir
-
-      - name: Cleanup Artifacts
-        run: rm -rf artifacts
 
       - name: Setup Pages
         uses: actions/configure-pages@v4
