--- a/.github/workflows/build-docs.yaml
+++ b/.github/workflows/build-docs.yaml
@@ -8,6 +8,7 @@ on:
 permissions:
   id-token: write
   pages: write
+  contents: write
 
 env:
   INSTANCE: 'Writerside/gnss-ir-version-docs'
@@ -21,7 +22,7 @@ jobs:
       artifact: ${{ steps.define-ids.outputs.artifact }}
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v4
+        uses: actions/checkout@v5
         with:
           fetch-depth: 0
 
@@ -46,24 +47,24 @@ jobs:
         with:
           instance: ${{ env.INSTANCE }}
           docker-version: ${{ env.DOCKER_VERSION }}
-          artifact: ${{ steps.define-ids.outputs.artifact }}
           is-group: ${{ env.IS_GROUP }}
 
       - name: Add versions.json file
         run: |
           zip -u ${{ steps.define-ids.outputs.artifact }} versions.json
 
-#      - name: Save artifact with build results
-#        uses: actions/upload-artifact@v4
-#        with:
-#          name: docs
-#          path: artifacts/*
-#          retention-days: 7
+      - name: Save artifact with build results
+        uses: actions/upload-artifact@v5
+        with:
+          name: docs
+          path: artifacts/*
+          retention-days: 7
+
   build-pdf:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Repository
-        uses: actions/checkout@v4
+        uses: actions/checkout@v5
         with:
           fetch-depth: 0
 
@@ -72,8 +73,32 @@ jobs:
         with:
           docker-version: ${{ env.DOCKER_VERSION }}
           instance: "Writerside/${{ github.ref_name }}"
-          artifact: "gnss-ir-${{ github.ref_name }}.pdf"
-          pdf: true
+          pdf: 'pdf.xml'
+
+      - name: Upload PDF artifact
+        uses: actions/upload-artifact@v5
+        with:
+          name: pdf
+          path: artifacts/*.pdf
+          retention-days: 7
+
+  create-release:
+    needs:
+      - build-pdf
+    runs-on: ubuntu-latest
+    steps:
+      - name: Download PDF artifact
+        uses: actions/download-artifact@v6
+        with:
+          name: pdf
+          path: artifacts
+
+      - name: Create GitHub Release
+        uses: softprops/action-gh-release@v2
+        with:
+          files: artifacts/*.pdf
+          body: "Automated release of PDF documentation for ${{ github.ref_name }}. The PDF file is below the release notes
+          as an attachment. The online version of these docs can be found at https://${{ github.repository_owner }}.github.io/${{ github.repository_id }}/${{ github.ref_name }}/"
 
   deploy:
     environment:
@@ -81,11 +106,10 @@ jobs:
       url: ${{ steps.deployment.outputs.page_url }}
     needs:
       - build
-      - build-pdf
     runs-on: ubuntu-latest
     steps:
       - name: Download artifacts
-        uses: actions/download-artifact@v4
+        uses: actions/download-artifact@v6
         with:
           name: docs
           path: artifacts
@@ -94,10 +118,10 @@ jobs:
         run: unzip -O UTF-8 -qq "artifacts/${{ needs.build.outputs.artifact }}" -d dir
 
       - name: Setup Pages
-        uses: actions/configure-pages@v4
+        uses: actions/configure-pages@v5
 
       - name: Package and upload Pages artifact
-        uses: actions/upload-pages-artifact@v3
+        uses: actions/upload-pages-artifact@v4
         with:
           path: dir
 
