--- a/.github/workflows/build-docs.yaml
+++ b/.github/workflows/build-docs.yaml
@@ -51,7 +51,7 @@ jobs:
 
       - name: Add versions.json file
         run: |
-          zip -u ${{ steps.define-ids.outputs.artifact }} versions.json
+          zip -u artifacts/${{ steps.define-ids.outputs.artifact }} versions.json
 
       - name: Save artifact with build results
         uses: actions/upload-artifact@v5
@@ -98,7 +98,7 @@ jobs:
         with:
           files: artifacts/*.pdf
           body: "Automated release of PDF documentation for ${{ github.ref_name }}. The PDF file is below the release notes
-          as an attachment. The online version of these docs can be found at https://${{ github.repository_owner }}.github.io/${{ github.repository_id }}/${{ github.ref_name }}/"
+          as an attachment. The online version of these docs can be found at https://${{ github.repository_owner }}.github.io/${{ github.repository_id }}/"
 
   deploy:
     environment:
