--- a/.github/workflows/build-docs.yaml
+++ b/.github/workflows/build-docs.yaml
@@ -98,7 +98,7 @@ jobs:
         with:
           files: artifacts/*.pdf
           body: "Automated release of PDF documentation for ${{ github.ref_name }}. The PDF file is below the release notes
-          as an attachment. The online version of these docs can be found at https://${{ github.repository_owner }}.github.io/${{ github.repository_id }}/"
+          as an attachment. The online version of these docs can be found at https://${{ github.repository_owner }}.github.io/gnss-ir-docs/"
 
   deploy:
     environment:
