--- a/Writerside/writerside.cfg
+++ b/Writerside/writerside.cfg
@@ -7,6 +7,6 @@
     <images dir="images" web-path="images"/>
     <categories src="c.list"/>
     <vars src="v.list"/>
-    <instance src="v1.0.0.tree" web-path="v1.1.0" version="1.0.0"/>
-    <instance src="v1.1.0.tree" web-path="v1.1.0" version="1.1.0"/>
+    <instance src="v1.0.0.tree" web-path="gnss-ir-docs" version="1.0.0"/>
+    <instance src="v1.1.0.tree" web-path="gnss-ir-docs" version="1.1.0"/>
 </ihp>
