docs: add base pages for v1.2.0

--- a/Writerside/writerside.cfg
+++ b/Writerside/writerside.cfg
@@ -9,4 +9,5 @@
     <vars src="v.list"/>
     <instance src="v1.0.0.tree" web-path="gnss-ir-docs" version="1.0.0"/>
     <instance src="v1.1.0.tree" web-path="gnss-ir-docs" version="1.1.0"/>
+    <instance src="v1.2.0.tree" web-path="gnss-ir-docs" version="1.2.0"/>
 </ihp>
